# lead-build

./: Cargo.toml  README.md  mkdocs.yml  testfile.dnj
archive/: grammar.pest  grammar.rs
docs/: index.md
docs/builds/: 01-rules-and-builds.md  02-ninja.md
docs/language/: 00-introduction.md  01-basics.md  02-expressions.md  03-functions.md  04-list-operations.md  05-paths.md
docs/reference/: builtins.md  language.md
example/: lib.dnj  lib.pbb  main.dnj  main.pbb  simpletest.pbb
example/subdir/: proxylib.dnj
src/: builtins.rs  context.rs  datamodel.rs  error.rs  expr.rs  grammar.lalrpop  grammar.pest  grammar.rs  immap.rs  lang.rs  main.rs  ninjawriter.rs  parser.rs  path.rs  pbbuild.rs  value.rs
src/lang/: context.rs  error.rs  expr.rs  grammar.lalrpop  immap.rs  immutablemap.rs  parser.rs  stringdecode.rs  testvalue.rs
src/lang/expr/: export.rs  matcher.rs  tests.rs
