[package]
name = "lead-build"
version = "0.0.1"
edition = "2024"
license = "GPL-2.0-only"
keywords = ["build", "ninja"]
authors = ["Max Sikström <max@pengi.se>"]

[lib]

[[bin]]
name = "pb"

[build-dependencies]
lalrpop = { git = "https://github.com/lalrpop/lalrpop" }

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lalrpop-util = { git = "https://github.com/lalrpop/lalrpop", features = [
    "lexer",
    "unicode",
] }
strum = { version = "0.28.0", features = ["derive"] }
