[package]
name = "lead-build"
version = "0.2.0"
edition = "2024"
license = "GPL-2.0-only"
keywords = ["build", "ninja"]
authors = ["Max Sikström <max@pengi.se>"]
description = "Configuration language for declarative builds"
documentation = "https://lead-build.readthedocs.io/en/latest/"
repository = "https://github.com/lead-build/lead-build"

[lib]

[[bin]]
name = "pb"

[build-dependencies]
lalrpop = { version = "0.23.1" }

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
strum = { version = "0.28.0", features = ["derive"] }
